--- a/src/containers/System/UserManage.scss
+++ b/src/containers/System/UserManage.scss
@@ -1,93 +1,98 @@
 #customers {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  #customers td, #customers th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  #customers tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #customers tr:hover {background-color: #ddd;}
-  
-  #customers th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #04AA6D;
-    color: white;
-  }
-
-  .btn-edit{
-    width: 50px;
-    border: none;
-    outline: none;
-    background: transparent;
-    color: orange;
-
-    &:hover{
-        background-color: transparent !important;
-        color: orange !important;
-    }
+  font-family    : Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width          : 100%;
 }
 
-    .btn-delete{
-        width: 50px;
-        border: none;
-        outline: none;
-        background: transparent;
-        color: rgb(227, 40, 27);
-    
-        &:hover{
-            background-color: transparent !important;
-            color: rgb(227, 40, 27) !important;
-        }
+#customers td,
+#customers th {
+  border : 1px solid #ddd;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#customers tr:hover {
+  background-color: #ddd;
+}
+
+#customers th {
+  padding-top     : 12px;
+  padding-bottom  : 12px;
+  text-align      : left;
+  background-color: #04AA6D;
+  color           : white;
+}
+
+.btn-edit {
+  width     : 50px;
+  border    : none;
+  outline   : none;
+  background: transparent;
+  color     : orange;
+
+  &:hover {
+    background-color: transparent !important;
+    color           : orange !important;
   }
+}
+
+.btn-delete {
+  width     : 50px;
+  border    : none;
+  outline   : none;
+  background: transparent;
+  color     : rgb(227, 40, 27);
+
+  &:hover {
+    background-color: transparent !important;
+    color           : rgb(227, 40, 27) !important;
+  }
+}
 
 
-.modalUserContainer{
-  .modal-content{
-    .modal-header{
-      button{
+.modalUserContainer {
+  .modal-content {
+    .modal-header {
+      button {
         background-color: transparent !important;
-        color: white;
-        border: none;
-        font-size: 20px;
-        cursor: pointer;
+        color           : white;
+        border          : none;
+        font-size       : 20px;
+        cursor          : pointer;
       }
     }
   }
 
-  .modal-user-body{
-    display: flex;
-    gap: 15px;
+  .modal-user-body {
+    display  : flex;
+    gap      : 15px;
     flex-wrap: wrap;
 
-    .input-container{
-      display: flex;
+    .input-container {
+      display       : flex;
       flex-direction: column;
-      width: 48%;
+      width         : 48%;
 
-      select{
-        height: 31px;
-        border: 1px solid grey;
+      select {
+        height       : 31px;
+        border       : 1px solid grey;
         border-radius: 3px;
-        outline: none;
-        padding: 0 10px;
+        outline      : none;
+        padding      : 0 10px;
       }
 
-      input{
+      input {
         border-radius: 3px;
-        border: 1px solid gray;
-        height: 30px;
-        outline: none;
-        padding: 0 10px;
-  
+        border       : 1px solid gray;
+        height       : 30px;
+        outline      : none;
+        padding      : 0 10px;
+
       }
-  
+
     }
   }
 
