--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -25,6 +25,9 @@
     }
 
     .languages {
+        .welcome{
+            margin: 0 10px;
+        }
         .language-en {
             margin-right: 15px;
             margin-left : 10px;
