--- a/src/containers/Auth/Login.scss
+++ b/src/containers/Auth/Login.scss
@@ -1,90 +1,95 @@
-.login-background{
-    height: 100vh;  
-    background: linear-gradient(135deg,rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+.login-background {
+    height    : 100vh;
+    background: linear-gradient(135deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
 
-    .login-container{
-        width: 400px;
-        height: 450px;
-        margin: auto;
+    .login-container {
+        width           : 400px;
+        height          : 450px;
+        margin          : auto;
         background-color: white;
-        border-radius: 10px;
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        top: 0;
-        left: 0;
+        border-radius   : 10px;
+        position        : absolute;
+        right           : 0;
+        bottom          : 0;
+        top             : 0;
+        left            : 0;
+        box-shadow      : 10px 8px 10px 10px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
-        .login-content{
+        .login-content {
             padding: 10px;
 
-            .text-login{
-                text-align: center;
+
+            .text-login {
+                text-align : center;
                 font-weight: 600;
-                font-size: 24px;
+                font-size  : 24px;
                 padding-top: 10px;
             }
 
-            .login-input{
+            .login-input {
                 margin: 7px 0;
 
-                .custom-input-password{
+                .custom-input-password {
                     position: relative;
-                    i{
+
+                    i {
                         position: absolute;
-                        right: 5px;
-                        top: 10px;
-                        cursor: pointer;
+                        right   : 5px;
+                        top     : 10px;
+                        cursor  : pointer;
                     }
                 }
             }
 
-            .btn-login{
-                width: 100%;
-                margin: 10px 0;
-                height: 30px;
-                outline: none;
-                border: none;
-                background: linear-gradient(135deg,rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-                color: white;
+            .btn-login {
+                width        : 100%;
+                margin       : 10px 0;
+                height       : 30px;
+                outline      : none;
+                border       : none;
+                background   : linear-gradient(135deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+                color        : white;
                 border-radius: 15px;
             }
 
-            .forgot-password{
+            .forgot-password {
                 font-size: 12px;
             }
 
-            .social-login{
-                display: flex;
+            .social-login {
+                display        : flex;
                 justify-content: center;
-                margin-top: 10px;
+                margin-top     : 10px;
 
 
-                .google{
-                    font-size: 30px;
-                    background: red;
-                    border-radius: 50%;
-                    height: 50px;
-                    width: 50px;
-                    display: flex;
-                    align-items: center;
+                .google {
+                    cursor         : pointer;
+                    font-size      : 30px;
+                    background     : red;
+                    border-radius  : 50%;
+                    height         : 50px;
+                    width          : 50px;
+                    display        : flex;
+                    align-items    : center;
                     justify-content: center;
-                    color: white;
-                    margin-right: 10px;
+                    color          : white;
+                    margin-right   : 10px;
                 }
 
-                .facebook{
-                    font-size: 30px;
-                    background: rgb(13, 135, 211);
-                    border-radius: 50%;
-                    height: 50px;
-                    width: 50px;
-                    display: flex;
-                    align-items: center;
+                .facebook {
+                    cursor         : pointer;
+                    font-size      : 30px;
+                    background     : rgb(13, 135, 211);
+                    border-radius  : 50%;
+                    height         : 50px;
+                    width          : 50px;
+                    display        : flex;
+                    align-items    : center;
                     justify-content: center;
-                    color: white;
+                    color          : white;
                 }
             }
-            
+
         }
     }
 }
