--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -5,7 +5,7 @@
     position        : fixed;
     top             : 0;
     background-color: white;
-    z-index: 10000;
+    z-index         : 10000;
 
     .home-header-content {
         width  : 100%;
@@ -83,13 +83,16 @@
                 }
             }
 
-            .avatar {
-                background     : url('../../assets/logo.svg') center center no-repeat;
-                height         : 100%;
-                width          : 100%;
-                cursor         : pointer;
-                background-size: 100%;
-                border-radius  : 50%;
+            .login-logout {
+                opacity    : 0.3;
+                margin-left: 20px;
+                cursor     : pointer;
+                border     : 1px;
+                padding    : 5px;
+                
+                &:hover {
+                    opacity: 1;
+                }
             }
         }
     }
