--- a/src/containers/Partial/MusicPlayer.scss
+++ b/src/containers/Partial/MusicPlayer.scss
@@ -1,8 +1,13 @@
 .player-container {
+    z-index        : 999;
+    background     : white;
     display        : flex;
     justify-content: space-between;
     height         : 100%;
+    bottom         : 0;
     width          : 100%;
+    position       : sticky;
+    padding: 1rem 0px;
     padding-left   : 1.25rem;
     padding-right  : 1.25rem;
 
