--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -4,27 +4,50 @@
     padding         : 0px 40px;
     position        : fixed;
     top             : 0;
-    background-color: white;
+    background-color: #333;
     z-index         : 10000;
+    color           : white;
+    font-family     : Inter, sans-serif;
+    font-weight     : 100;
+    font-size       : 14px;
 
     .home-header-content {
-        width  : 100%;
-        height : 100%;
-        display: flex;
+        width          : 100%;
+        height         : 100%;
+        display        : flex;
+        justify-content: space-evenly;
+        align-items    : center;
 
         .left-content {
-            display    : flex;
-            width      : 20%;
-            align-items: center;
+            width             : 37%;
+            display           : flex;
+            // justify-content: space-between;
+            // align-items    : center;
+            height            : 60px;
 
+            .child-content {
+                line-height : 60px;
+                height      : 60px;
+                width       : 120px;
+                text-align  : center;
+                border-right: 1px solid #111;
+                opacity     : 0.7;
+
+                &:hover {
+                    opacity         : 1;
+                    background-color: #373131;
+                    cursor          : pointer;
+                }
+
+                .subs-title {
+                    font-weight: 400;
+                    font-size  : 12px;
+                }
+            }
 
             .header-logo {
                 //background     : url('../../assets/logo.svg') center center no-repeat;
-                transform: scale(0.5, 0.5);
-                padding  : 0 20px;
-                cursor   : pointer;
-                height   : 100%;
-                width    : 100%;
+                cursor: pointer;
             }
 
             i {
@@ -36,28 +59,69 @@
 
         .center-content {
             padding        : 0 20px;
-            width          : 55%;
+            width          : 20%;
             display        : flex;
             justify-content: space-between;
             align-items    : center;
+            margin-left    : -3rem;
 
-            .child-content {
-                .subs-title {
-                    font-weight: 400;
-                    font-size  : 12px;
+
+
+            .search-header {
+                width          : fit-content;
+                display        : flex;
+                justify-content: center;
+                align-items    : center;
+                margin         : 0 auto;
+                padding        : 10px;
+                border-radius  : 1rem;
+                background     : white;
+
+                i {
+                    margin: 0 5px;
+                    color : black;
+                    cursor: pointer;
                 }
+
+                input {
+                    height    : 0.01rem;
+                    width     : 14rem;
+                    background: transparent;
+                    border    : none;
+                    outline   : none;
+                    padding   : 10px 0;
+                }
+
             }
         }
 
         .right-content {
-            width          : 25%;
+            width          : 30%;
             display        : flex;
             justify-content: flex-end;
             align-items    : center;
 
+            .child-content {
+                line-height : 60px;
+                height      : 60px;
+                width       : 100px;
+                text-align  : center;
+                border-right: 1px solid #111;
+                border-left : 1px solid #111;
+                opacity     : 0.7;
+
+                &:hover {
+                    opacity         : 1;
+                    background-color: #373131;
+                    cursor          : pointer;
+                }
+            }
+
             .language-vn {
-                opacity: 0.3;
-                cursor : pointer;
+                margin-left  : 10px;
+                opacity      : 0.3;
+                cursor       : pointer;
+                padding-right: 10px;
 
                 &.active {
                     opacity: 1;
@@ -84,12 +148,13 @@
             }
 
             .login-logout {
-                opacity    : 0.3;
-                margin-left: 20px;
-                cursor     : pointer;
-                border     : 1px;
-                padding    : 5px;
-                
+                opacity      : 0.3;
+                margin-left  : 20px;
+                cursor       : pointer;
+                border       : 1px;
+                padding      : 5px;
+                padding-right: 10px;
+
                 &:hover {
                     opacity: 1;
                 }
@@ -117,7 +182,7 @@
             font-size    : 30px;
             text-shadow  : 1px 1px 1px #333;
             margin-bottom: 5px;
-            margin-top   : 30px;
+            margin-top   : 46px;
             color        : white;
         }
 
