--- a/src/containers/Partial/MusicPlayer.scss
+++ b/src/containers/Partial/MusicPlayer.scss
@@ -1,15 +1,16 @@
 .player-container {
-    z-index        : 999;
-    background     : white;
-    display        : flex;
-    justify-content: space-between;
-    height         : 100%;
-    bottom         : 0;
-    width          : 100%;
-    position       : sticky;
-    padding: 1rem 0px;
-    padding-left   : 1.25rem;
-    padding-right  : 1.25rem;
+    z-index         : 999;
+    display         : flex;
+    justify-content : space-between;
+    height          : 100%;
+    bottom          : 0;
+    width           : 100%;
+    position        : sticky;
+    padding         : 1rem 0px;
+    padding-left    : 1.25rem;
+    padding-right   : 1.25rem;
+    background-color: #f2f2f2;
+    border-top      : 1px solid #cecece;
 
     .player-left {
         border     : 1px solid red;
@@ -80,7 +81,7 @@
 
         .progress {
             width           : 100%;
-            background-color: white;
+            background-color: #f2f2f2;
             display         : flex;
             justify-content : center;
             gap             : 5px;
