--- a/src/containers/Section/AlbumMusic.scss
+++ b/src/containers/Section/AlbumMusic.scss
@@ -1,10 +1,131 @@
 .album-container {
     position: relative;
-    top     : 20px;
-    display : flex;
+    top     : 9px;
     gap     : 8;
-    width   : 100%;
+    width   : 80%;
+    margin  : auto;
     padding : 50px 0px 50px 0px;
+    border  : 1px solid springgreen;
+    height  : 1000px;
+
+    .album-banner {
+        width  : 100%;
+        height : 30rem;
+        display: flex;
+
+        .album-banner-left {
+            border  : 1px solid black;
+            width   : 55%;
+            position: relative;
+
+
+
+            .album-info-up {
+                display        : flex;
+                justify-content: flex-start;
+                align-items    : flex-start;
+
+
+                .play {
+                    cursor: pointer;
+                    margin: 2rem;
+                    width : 3rem;
+
+                    i {
+
+                        font-size    : 4rem;
+                        border-radius: 6rem;
+
+                        &::after {
+                            color: white;
+                        }
+
+                    }
+
+                }
+
+                .title-artist {
+                    margin          : 2rem 0;
+                    background-color: black;
+                    text-align      : left;
+                    display         : grid;
+
+                    .title {
+                        display         : flex;
+                        align-items     : center;
+                        background-color: black;
+                    }
+
+                    .artist {
+                        background-color: black;
+                        color           : white;
+                    }
+                }
+            }
+
+            .album-info-down {
+                position        : absolute;
+                display         : flex;
+                justify-content : center;
+                text-align      : center;
+                align-items     : center;
+                margin          : 4rem;
+                border-radius   : 4rem;
+                bottom          : 0;
+                width           : 8rem;
+                height          : 8rem;
+                border          : 1px solid green;
+                flex-direction  : column;
+                background-color: black;
+                color           : white;
+
+                .song-count {
+                    font          : 12px / 1.4 Inter, sans-serif;
+                    line-height   : 0.8rem;
+                    font-weight   : bold;
+                    text-transform: uppercase;
+
+                    .total-song {
+                        font-size: 3rem;
+                    }
+                }
+
+                .total-time {
+                    opacity: 0.4;
+                }
+            }
+        }
+
+        .album-banner-center {
+            width: 10%;
+
+            .create-at {
+                text-align: right;
+                margin    : 2rem;
+                width     : 10rem;
+                height    : 2rem;
+                border    : 1px solid black;
+            }
+        }
+
+        .album-banner-right {
+            border         : 1px solid yellow;
+            width          : 35%;
+            display        : flex;
+            justify-content: flex-end;
+            align-items    : flex-end;
+
+            .album-thumbnail {
+                width : 78%;
+                height: 86.6%;
+                margin: 2rem;
+            }
+        }
+
+
+    }
+
+
 
     .album-content-left {
         display       : flex;
@@ -59,18 +180,18 @@
         border   : 1px solid yellowgreen;
 
         .album-list-song {
-            width: 100%;
-            display: flex;
+            width         : 100%;
+            display       : flex;
             flex-direction: column;
-            font-size: 0.75rem;
-            font-weight: 600;
+            font-size     : 0.75rem;
+            font-weight   : 600;
 
             .album-list-title {
-                font-size: 0.75rem;
-                display: flex;
+                font-size      : 0.75rem;
+                display        : flex;
                 justify-content: space-between;
-                align-items: center;
-                padding: 10px;
+                align-items    : center;
+                padding        : 10px;
             }
 
             .list-song-container {
@@ -123,6 +244,110 @@
         }
 
     }
+
+    .album-content {
+        .album-action {
+            width  : 70%;
+            border : 1px solid orange;
+            height : 4rem;
+            margin : 0 auto;
+            display: inline-block;
+
+            .like {
+                margin          : 1rem;
+                position        : relative;
+                height          : 26px;
+                padding         : 2px 11px 2px 10px;
+                border          : 1px solid #e5e5e5;
+                border-radius   : 3px;
+                background-color: #fff;
+                cursor          : pointer;
+                color           : #333;
+                font-size       : 14px;
+                line-height     : 20px;
+                white-space     : nowrap;
+                font-family     : Inter, sans-serif;
+                font-weight     : 100;
+                text-align      : center;
+                display         : block;
+                float           : left;
+
+                span {
+                    padding-right: 0.4rem;
+                }
+            }
+
+            .liked {
+                margin          : 1rem;
+                height          : 26px;
+                padding         : 2px 11px 2px 10px;
+                border-radius   : 3px;
+                background-color: #fff;
+                cursor          : pointer;
+                color           : #333;
+                font-size       : 14px;
+                line-height     : 20px;
+                white-space     : nowrap;
+                font-family     : Inter, sans-serif;
+                font-weight     : 100;
+                text-align      : center;
+                opacity         : 0.5;
+                display         : block;
+                float           : right;
+
+                span {
+                    padding-right: 0.4rem;
+                }
+            }
+        }
+
+        .album-info {
+            display: flex;
+            height : 100%;
+            width  : 70%;
+            border : 1px solid rgb(66, 199, 66);
+
+            .album-content-left {
+                height: 100%;
+
+                .album-info-avatar {
+                    margin-top   : 1rem;
+                    border-radius: 4rem;
+                    height       : 8rem;
+                    width        : 8rem;
+                    border       : 1px solid rosybrown;
+                    box-shadow   : inset 0 0 0 1px rgba(0, 0, 0, .1);
+
+                }
+
+                .album-info-name {}
+
+                .album-info-quantity {
+                    color: #999;
+                }
+
+                .album-info-btn-follow {
+                    .btn-follow {
+                        background-color: #f50;
+                        border-color    : #f50;
+                        color           : #fff;
+                        cursor          : pointer;
+                        border          : 1px solid #e5e5e5;
+                        border-radius   : 3px;
+                        font-weight     : 100;
+                        white-space     : nowrap;
+                        font-size       : 11px;
+                        padding         : 2px 9px 2px 8px;
+                        height          : 22px;
+                        line-height     : 16px;
+                    }
+
+                }
+            }
+        }
+    }
+
+
 }
 
 .album-player {
