--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -110,6 +110,8 @@
                 border-left : 1px solid #111;
                 opacity     : 0.7;
 
+                .profile {}
+
                 &:hover {
                     opacity         : 1;
                     background-color: #373131;
@@ -148,16 +150,21 @@
             }
 
             .login-logout {
-                opacity      : 0.3;
+
                 margin-left  : 20px;
                 cursor       : pointer;
                 border       : 1px;
                 padding      : 5px;
                 padding-right: 10px;
 
-                &:hover {
-                    opacity: 1;
+                span {
+                    opacity: 0.3;
+
+                    &:hover {
+                        opacity: 1;
+                    }
                 }
+
             }
         }
     }
