--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -2,4 +2,8 @@
 
 .main-container {
     position: relative;
+
+    .Toastify__toast-container--top-right {
+        z-index: 99999999999999999999999;
+    }
 }
