--- a/src/containers/Section/Profile/Profile.scss
+++ b/src/containers/Section/Profile/Profile.scss
@@ -216,5 +216,31 @@
 
     .profile-content-right {
         width: 30%;
+
+        .content-right {
+            width: 100%;
+
+            .header {
+                .table-stat {
+                    width: 100%;
+
+                    .info-stat {
+                        width: 33.3%;
+                        color: #999;
+
+                        a {
+                            h3 {
+                                font-family: Inter, sans-serif;
+                                font-weight: 100;
+                                font-size  : 14px;
+                            }
+                        }
+
+                        text-align : center;
+                    }
+                }
+
+            }
+        }
     }
 }
