--- a/src/containers/Partial/MusicPlayer.scss
+++ b/src/containers/Partial/MusicPlayer.scss
@@ -29,6 +29,10 @@
 
             .song-username {
                 font-weight: 500;
+
+                &:hover {
+                    cursor: pointer;
+                }
             }
 
             span {
