--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -26,6 +26,7 @@
             height            : 60px;
 
             .child-content {
+
                 line-height : 60px;
                 height      : 60px;
                 width       : 120px;
@@ -102,15 +103,23 @@
             align-items    : center;
 
             .child-content {
-                line-height : 60px;
-                height      : 60px;
-                width       : 100px;
-                text-align  : center;
-                border-right: 1px solid #111;
-                border-left : 1px solid #111;
-                opacity     : 0.7;
+                line-height       : 60px;
+                height            : 60px;
+                width             : 100px;
+                text-align        : center;
+                // border-right   : 1px solid #111;
+                // border-left    : 1px solid #111;
+                opacity           : 0.7;
+                display           : flex;
+                justify-content   : center;
 
-                .profile {}
+                .profile {
+                    width        : 50px;
+                    height       : 50px;
+                    border-radius: 50%;
+                }
+
+
 
                 &:hover {
                     opacity         : 1;
