--- a/src/containers/Section/Profile/All.scss
+++ b/src/containers/Section/Profile/All.scss
@@ -116,6 +116,12 @@
                                 p {
                                     margin-left: 5px
                                 }
+
+                                &:hover {
+                                    color       : #333;
+                                    outline     : 0;
+                                    border-color: #ccc;
+                                }
                             }
                         }
                     }
@@ -219,6 +225,13 @@
                             display: flex;
 
                             .like {
+
+                                &:hover {
+                                    color       : #333;
+                                    outline     : 0;
+                                    border-color: #ccc;
+                                }
+
                                 display         : flex;
                                 position        : relative;
                                 height          : 26px;
@@ -231,9 +244,10 @@
                                 font-size       : 14px;
                                 line-height     : 20px;
                                 white-space     : nowrap;
-                                font-family     : Inter, sans-serif;
-                                font-weight     : 100;
-                                text-align      : center;
+                                font-family     : Inter,
+                                sans-serif;
+                                font-weight : 100;
+                                text-align  : center;
 
                                 p {
                                     margin-left: 5px
