--- a/src/containers/Section/Profile/Partial/UploadPage.scss
+++ b/src/containers/Section/Profile/Partial/UploadPage.scss
@@ -9,6 +9,13 @@
         .modal-body {
             padding: 0 0 !important;
 
+            .loader-container {
+                top   : 0px;
+                left  : 0;
+                width : 100%;
+                height: 100vh;
+            }
+
             .upload-container {
 
                 .upload {
