--- a/src/containers/Search/Search.scss
+++ b/src/containers/Search/Search.scss
@@ -11,7 +11,7 @@
 
         .search-up-container {
             width : 100%;
-            height: 15%;
+            height: 10%;
 
             .search-up {
                 display      : flex;
@@ -32,14 +32,15 @@
         }
 
         .search-down-container {
-            width : 100%;
-            height: 85%;
+            width     : 100%;
+            height    : 90%;
+            margin-top: 30px;
 
             .search-down {
                 display: flex;
 
                 .search-menu-container {
-                    width : 30%;
+                    width : 20%;
                     height: 100%;
 
                     .search-menu {
@@ -47,24 +48,64 @@
                         height: 100%;
 
                         .list-menu {
-
+                            margin : 0;
+                            padding: 0;
 
                             .list-menu-item {
-                                display        : flex;
-                                list-style     : none;
-                                align-items    : center;
-                                justify-content: flex-start;
 
-                                .icon {
-                                    width : 20px;
-                                    height: 20px;
+                                list-style: none;
+
+                                .list-menu-item-content {
+                                    display    : flex;
+                                    align-items: center;
+                                    padding    : 10px 10px 10px 0;
+                                    margin     : 0;
+
+                                    .icon {
+                                        width : 20px;
+                                        height: 20px;
+                                        margin: 0;
+                                    }
+
+                                    p {
+                                        margin: 0;
+                                    }
+
+
+
+
                                 }
+                            }
+
+                            .m-active {
+                                background-color: #ffa500;
+                                position        : relative;
+
+                                &::after {
+                                    content     : '';
+                                    border      : solid white;
+                                    border-width: 0 3px 3px 0;
+                                    display     : inline-block;
+                                    padding     : 5px;
+                                    transform   : rotate(-45deg);
+                                    position    : absolute;
+                                    right       : 10px;
+                                    top         : 50%;
+                                    transform   : translateY(-50%) rotate(-45deg);
+                                }
+                            }
+
+                            &:hover {
+                                cursor: pointer;
                             }
                         }
                     }
                 }
 
-                .search-content-container {}
+                .search-content-container {
+                    width : 80%;
+                    height: 100%;
+                }
             }
         }
     }
