--- a/src/containers/Search/Search.scss
+++ b/src/containers/Search/Search.scss
@@ -52,7 +52,7 @@
                             padding: 0;
 
                             .list-menu-item {
-
+                                padding   : 0 10px;
                                 list-style: none;
 
                                 .list-menu-item-content {
