--- a/src/containers/Section/AlbumMusic.scss
+++ b/src/containers/Section/AlbumMusic.scss
@@ -170,6 +170,14 @@
                 font-size  : 0.75rem;
             }
         }
+
+        .btn-follow {
+            width: 75px !important;
+        }
+
+        .btn-followed {
+            width: 87px !important;
+        }
     }
 
     .album-content {
@@ -199,7 +207,7 @@
                     font-family     : Inter, sans-serif;
                     font-weight     : 100;
                     text-align      : center;
-                    display         : block;
+                    display         : flex;
                     float           : left;
 
                     span {
@@ -367,8 +375,8 @@
                 }
 
                 .content-relative {
-                    width         : 100%;
-                    height        : 100%;
+                    width            : 100%;
+                    height           : 100%;
                     // display       : flex;
                     // flex-direction: row;
                     // align-items   : center;
