--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -192,6 +192,7 @@
     flex-direction     : column;
 
     .content-up {
+        margin-top      : 144px;
         background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(255, 255, 255, 0.1));
         padding-top     : 15px;
         height          : 65%;
