--- a/src/containers/Section/Profile/Profile.scss
+++ b/src/containers/Section/Profile/Profile.scss
@@ -249,6 +249,16 @@
     .actions {
         display: flex;
 
+        .btn-follow-container {
+            .btn-follow {
+                width: 75px !important;
+            }
+
+            .btn-followed {
+                width: 90px !important;
+            }
+        }
+
         .btn-edit {
 
             display         : inline-block;
@@ -577,29 +587,7 @@
                                                 }
                                             }
 
-                                            .btn-follow {
-                                                font-family  : Inter, sans-serif;
-                                                width        : 35%;
-                                                border       : 1px solid #e5e5e5;
-                                                border-radius: 4px;
-                                                display      : flex;
-                                                align-items  : center;
-                                                padding      : 3px 5px;
-                                                font-weight  : 100;
 
-                                                .icon-follow {
-                                                    display     : block;
-                                                    width       : 16px;
-                                                    height      : 12px;
-                                                    margin-right: 5px;
-                                                }
-
-                                                .text-follow {}
-
-                                                &:hover {
-                                                    border: 1px solid #333;
-                                                }
-                                            }
                                         }
 
                                     }
