--- a/src/containers/Search/Album.scss
+++ b/src/containers/Search/Album.scss
@@ -1,6 +1,15 @@
 .search-album-container {
     .search-album-up-container {
-        .count-album {}
+        margin: 0 30px;
+
+        .count-album {
+            font-weight: 400;
+            color      : #999;
+            font-family: Inter, sans-serif;
+            margin     : 18px 0 0;
+            line-height: 1.3;
+            font-size  : 14px;
+        }
     }
 
     .search-album-down-container {
@@ -116,13 +125,19 @@
                                         }
 
                                         .artist-name {
-                                            color      : #999;
-                                            font-weight: 100;
+                                            a {
+                                                color      : #999;
+                                                font-weight: 100;
+                                            }
+
                                         }
 
                                         .song-name {
-                                            color      : #333;
-                                            font-weight: 100;
+                                            a {
+                                                color      : #333;
+                                                font-weight: 100;
+                                            }
+
                                         }
                                     }
 
