--- a/src/containers/Search/People.scss
+++ b/src/containers/Search/People.scss
@@ -65,6 +65,12 @@
                             font-weight  : 100;
                             color        : #999;
                             margin-bottom: 5px;
+                            display      : flex;
+
+                            div {
+                                margin-top : -3px;
+                                margin-left: 6px;
+                            }
                         }
                     }
                 }
