--- a/src/containers/Search/People.scss
+++ b/src/containers/Search/People.scss
@@ -15,6 +15,8 @@
 
     .search-people-down-container {
         .search-people-down-list {
+            margin-bottom: 50px;
+
             .content {
                 margin : 15px 30px;
                 display: flex;
