--- a/src/containers/System/Admin/PlayList/PlayListManage.scss
+++ b/src/containers/System/Admin/PlayList/PlayListManage.scss
@@ -20,6 +20,8 @@
         }
 
         .spotlight-content {
+            margin-bottom: 50px;
+
             .content {
                 height : 200px;
                 display: flex;
