--- a/src/containers/Partial/FollowBtn.scss
+++ b/src/containers/Partial/FollowBtn.scss
@@ -18,7 +18,13 @@
             margin-right: 5px;
         }
 
-        .text-follow {}
+        .text-follow {
+            white-space  : nowrap;
+            overflow     : hidden;
+            text-overflow: ellipsis;
+            max-width    : 100px;
+            display      : inline-block;
+        }
 
         &:hover {
             border: 1px solid #333;
