--- a/src/containers/Search/Album.scss
+++ b/src/containers/Search/Album.scss
@@ -93,11 +93,12 @@
                         height: 124px;
 
                         .list-song {
-                            height    : 100%;
-                            width     : 100%;
-                            border    : 1px solid #e5e5e5;
-                            overflow-y: auto;
-                            overflow-x: hidden;
+                            margin-bottom: 50px;
+                            height       : 100%;
+                            width        : 100%;
+                            border       : 1px solid #e5e5e5;
+                            overflow-y   : auto;
+                            overflow-x   : hidden;
 
                             .sub-list-song {
                                 .song {
