--- a/src/containers/Search/Song.scss
+++ b/src/containers/Search/Song.scss
@@ -15,6 +15,8 @@
 
     .search-song-down-container {
         .search-song-down-list {
+            margin-bottom: 50px;
+
             .content {
                 display: flex;
 
