--- a/src/containers/Section/Profile/All.scss
+++ b/src/containers/Section/Profile/All.scss
@@ -2,6 +2,17 @@
     width      : 100%;
     font-family: Inter, sans-serif;
 
+    .no-songs-message {
+        flex           : 1;
+        display        : flex;
+        justify-content: center;
+        align-items    : center;
+        text-align     : center;
+        color          : #888;
+        font-style     : italic;
+        font-size      : 18px;
+    }
+
     .spotlight {
         h2 {
             font-size  : 24px;
