--- a/src/containers/Section/SongDetail.scss
+++ b/src/containers/Section/SongDetail.scss
@@ -226,6 +226,29 @@
                 }
             }
 
+            .add {
+                display         : flex;
+                position        : relative;
+                height          : 26px;
+                padding         : 2px 11px 2px 10px;
+                border          : 1px solid #e5e5e5;
+                border-radius   : 3px;
+                background-color: #fff;
+                cursor          : pointer;
+                color           : #333;
+                font-size       : 14px;
+                line-height     : 20px;
+                white-space     : nowrap;
+                font-family     : Inter, sans-serif;
+                font-weight     : 100;
+                align-items     : center;
+                justify-content : center;
+                text-align      : center;
+                margin-left     : 10px;
+                width           : 4%;
+
+            }
+
             .delete {
                 display         : flex;
                 position        : relative;
@@ -289,6 +312,7 @@
                 font-size : 16px;
                 width     : 30%;
                 text-align: right;
+                cursor    : pointer;
 
                 &:hover {
                     color: #333;
